Feat/payment and preorder 20251103 (#96)
* fix: products, bug Place&Order

* Feat/contract payment process 20251102 (#90)

* feat: Add additional domain layer implementations
- Add String() methods for contract_payment method and status enum
- Add missing PaymentTransactionStatus enum
- Add PayOSStatus enum for support with PayOS payment gateway
- Refactor PaymentTransaction model to include PayOS metadata fields

* feat(payos): Integrate PayOS payment processing through proxies layer

* feat(payment_transaction): Migrate old PayOS service to new PaymentTransactionService
- Remove old PayOS implementation in the infrastructure layer
- Add PaymentTransactionService interface and implementation with the
  PayOS Proxy
- Update OrderService to use the PaymentTransactionService to GeneratePaymentLink

* feat: Add dtos for payos

* feat(payment_transaction): Add implementation for Handler integrating
PaymentTrasactionService

* feat(cronjobs): Add PayOS expiry check job
- Update admin config to include PayOS expiry check job
- Add PayOS expiry check job to cron jobs registry

* feat(contract_payment): Add GET API endpoints for contract payments

* refactor: format code

* feat: add payment transaction reference type enum and update related services

* feat: Add FSM for Payment Transaction with side effects

* feat: Add API endpoitn for creating payment link from contract payments

* Fix/payos verify webhook signature 20251104 (#91)

* fix: webhook signature verification logic for PayOS
- Add key fields sorting before signature generation

* feat: Add PayOS Confirm webhook API endpoint

* refactor: Update Swagger docs

* fix: Fix malformed migrations file

* Feat/vault integration 20251104 (#92)

* refactor: Switch to use interfaces instead of direct struct

* refactor: Move RSA Keys Pair generation to pkg/crypto for reuse

* feat: implement vault integration for secret management
- Added VaultService for secure secret storage and retrieval
- Update config parseRSAKeys() m
